fixed 404 spacing

--- a/sass/404.scss
+++ b/sass/404.scss
@@ -11,6 +11,7 @@
 }
 
 .fourofour {
+  margin-top: 100px;
   font-size: 100px;
   color: black;
 }
